client/css/home.css
.initially-hidden {
	display: none;
}

.light-med-text {
  font-size: 20px;
  color: #7b7b7b;
}

.home-page-token {
  width: 11%;
}

#alert {
  width: 300px;
  position: fixed;
  top: 50%;
  left: 50%;
  margin: -100px 0 0 -150px;
  z-index: 99;
}

.curr-player{
  background-color: LightCyan;
}

.token-image {
  position: absolute;
}

.token-image.unplaced {
  opacity: 0;
}

.token-image.unplaced:hover {
  opacity: 0.3;
}

.token-image.placed {
  opacity: 1;
}

.player-token {
  height: 60px;
  width: 60px;
}

.choose-token-image {
  /*height: ;*/
  width: 33%;
  padding: 10px;
}

.choose-token-image:hover {
  filter: brightness(85%);
  -webkit-filter: brightness(85%);
}

.choose-token-image.taken {
  filter: brightness(40%);
  -webkit-filter: brightness(40%);
}

.winner-icon {
  height: 20px;
}

.center-contents-horizontal {
  text-align: center;
}

.table > tbody > tr > td.center-cell-contents  {
  vertical-align: middle;
  text-align: center;
}

.center-on-page {
  margin-top: 12%;
}

/* need this to make the gameboard dynamic */
#gameboard-container::before {
	content:"";
	display:block;
	padding-bottom:100%;
}

#gameboard {
	position: absolute;
 	top: 0;
 	right: 0;
 	left: 0;
 	bottom: 0;
}

.board-white {
  fill: #f5e3d6;
  stroke: #eac8ae;
}

.board-nonwhite {
  fill: #DEB887;
  stroke: #786449;
}

.unread-svg {
  height: 8px;
  width: 8px;
  margin: 3px;
}

.unread-circle {
  fill: green;
  stroke: black;
  stroke-width: 1;
}

#music-control-panel {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 15%;
}

#multiplayer-username-container {
  width: 30%;
  margin: 0 auto;
}

.button{
  position: relative;
  display: inline-block;
  background: #e6e6ff;  /*light purple*/
  border: none;
  padding: 15px 25px;
  border-radius: 15px;  
  cursor: pointer;
  outline: none;
  box-shadow: 0 5px #999;
}

.button:hover{
  background-color: #8080ff;
}


.button:active{
  background-color: #8080ff;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}
/*-----------------------------------------*/
.button2{
  background-color: #cceeff;  /*light blue*/
  border-radius: 15px;
}

.button2:hover{
  background-color: #00aaff;
}


.button2:active{
  background-color: #00aaff;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}
/*-----------------------------------------*/
.button3{
  background-color: #ffe6f2;  /*light pink*/
  border-radius: 15px;
}

.button3:hover{
  background-color:#ff80bf;
}

.button3:active{
  background-color: #ff80bf;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

/*-----------------------------------------*/
.button4{
  background-color: #ffffff;  /* White */
  border-radius: 15px;
}

.button4:hover{
  background-color:#f2f2f2;
}

.button4:active{
  background-color: #f2f2f2;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

